# RAFT_Consensus_Algorithm

./: CMakeLists.txt  README.md  run.sh
client_commands/: commands_client_1.txt  commands_client_2.txt
client_commands/new_log_entries_files/: new_multiple_log_entries.txt  new_single_log_entry.txt
src/: main.cpp
src/client/: README.md  client.cpp  client.hpp
src/clock/: README.md  clock.cpp  clock.hpp
src/message/: README.md  message.cpp  message.hpp
src/repl_controller/: README.md  repl_contoller.cpp  repl_contoller.hpp
src/rpc/: README.md  rpc.cpp  rpc.hpp  rpc_communication.cpp  rpc_communication.hpp
src/rpc/entries/: append_entries.cpp  append_entries.hpp  log_entry.cpp  log_entry.hpp  new_log_entry.cpp  new_log_entry.hpp
src/rpc/heartbeat/: heartbeat.cpp  heartbeat.hpp
src/rpc/leader/: search_leader.cpp  search_leader.hpp
src/rpc/query/: query.cpp  query.hpp
src/rpc/vote/: request_vote.cpp  request_vote.hpp
src/server/: README.md  server.cpp  server.hpp
src/utils/: README.md
tests/: README.md
